--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.2.0
   intl: ^0.17.0
+  image_stack: ^2.1.0
 
 dev_dependencies:
   flutter_test:
